Enhance temporary file management and update README for clarity
- Added cleanup functionality to remove temporary files on application exit and startup in eel_app.py.
- Implemented error handling for GIF uploads in import_gif_bytes function to ensure valid GIF files are processed.
- Updated README.md to reflect changes in features and usage instructions, including the new web UI and improved file handling.
- Added .gitignore entries for local development files and virtual environments.

--- a/web/index.html
+++ b/web/index.html
@@ -64,6 +64,7 @@
         <div class="stack">
           <div class="row">
             <button id="btn-browse" class="cta">Browse GIF…</button>
+            <input id="file-input" type="file" accept=".gif" hidden />
             <span class="pixie-mark"></span>
           </div>
           <div class="row">
